--- a/templates/admin/add_student_to_classroom_all.html
+++ b/templates/admin/add_student_to_classroom_all.html
@@ -23,7 +23,7 @@
       <label for="classroom_id" class="block mb-1 font-semibold text-gray-700">เลือกห้องเรียน</label>
       <select name="classroom_id" id="classroom_id" class="border w-full p-2 rounded">
         {% for c in classrooms %}
-          <option value="{{ c.id }}">{{ c.name }} (ปี {{ c.academic_year }}, เทอม {{ c.semester }})</option>
+          <option value="{{ c.id }}">{{ c.name }} </option>
         {% endfor %}
       </select>
     </div>
